# ncs_ssd1306_st7789v_display_ble

./: CMakeLists.txt  README.md  app.overlay  display.c  mainthread.c  prj.conf
LvglFontTool/: config.ini
fonts/: font10x16.c  font5x7.c
inc/: general_io.h
ncs_oled_ble_ssd1306/: README.md  app.overlay  dt_readme.md  nrf52832.dtsi.lnk  nrf52dk_nrf52832.dts.lnk
ncs_oled_ble_ssd1306/fonts/: font15x24.c
ncs_oled_ble_ssd1306/inc/: general_io.h
ncs_oled_ble_ssd1306/src/: main.c  taskdisplay.c
ncs_oled_noble_ssd1306/: README.md  display.h  main.c  nrf52832.dtsi.lnk  nrf52dk_nrf52832.dts.lnk  nrf52dk_nrf52832.overlay  prj.conf
ncs_oled_noble_ssd1306/fonts/: font20x32.c  font8x8.c
ncs_st7789v_lvgl/: west.url
ncs_st7789v_lvgl-nrf52832/: CMakeLists.txt  app.overlay  prj.conf
ncs_st7789v_lvgl-nrf52832/src/: main.c
ncs_st7789v_lvgl-nrf52832_guiguider/: prj.conf  readme.md
ncs_st7789v_lvgl-nrf52832_guiguider/src/: events_init.c  events_init.h  generated.mk  gui_guider.c  gui_guider.h  guider_customer_fonts.h  guider_customer_fonts.mk  guider_fonts.h  guider_fonts.mk  images.mk  lv_font_montserratMedium_12.c  lv_font_montserratMedium_16.c  main.c  setup_scr_screen.c  setup_scr_screen_1.c  setup_scr_screen_2.c
ncs_st7789v_lvgl-nrf52832_screen_switch/src/: main.c
ncs_st7789v_lvgl_nrf52832_helloword/: CMakeLists.txt  README.md  app.overlay  prj.conf
ncs_st7789v_lvgl_nrf52832_helloword/src/: main.c
ncs_st7789v_nrf52832/: CMakeLists.txt  prj.conf
ncs_st7789v_nrf52832/src/: main.c
src/: main.c  taskdisplay.c  taskkey.c  taskled.c
